--- a/principal_new.html
+++ b/principal_new.html
@@ -100,6 +100,26 @@
         transform: scale(2.5);
     }
 
+    .reaction-option {
+    margin: 0 5px;
+    color: green;
+    cursor: pointer;
+    font-size: 16px;
+    transition: transform 0.3s ease, font-size 0.3s ease;
+}
+
+.reaction-option.grow {
+    transform: scale(2);
+    font-size: 24px;
+}
+
+.reaction-group {
+    display: flex;
+    gap: 10px;
+    margin-top: 5px;
+    justify-content: center;
+}
+
 </style>
 
 
