--- a/principal_new.html
+++ b/principal_new.html
@@ -189,6 +189,14 @@
     </style>
 
 
+<style>
+    .colored-blue { color: blue; font-weight: bold; }
+    .colored-purple { color: purple; font-weight: bold; }
+    .colored-green { color: green; font-weight: bold; }
+    .colored-red { color: red; font-weight: bold; }
+</style>
+
+
 
 
 
