--- a/principal_new.html
+++ b/principal_new.html
@@ -7,11 +7,11 @@
 
      <style>
       html {
-           background: linear-gradient(45deg, lime,darkgreen);
+           background: linear-gradient(0deg, white,white);
              }
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(45deg, lime,darkgreen);
+            background: linear-gradient(0deg, white,white);
         }
    
         .container {
@@ -317,7 +317,7 @@
 
 
       <div id="menu" class="menu">
-                <center><h4><i>thesocks.net</i></h4></center>
+                <center><h4><i><font color="green">thesocks.net</i></font></h4></center>
 
                 <ul>    
                     <li>                         
@@ -517,7 +517,7 @@
   <div class="input-group" style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
           
           <!--<h3><div id="NFTUsernames-count"><em>thesocks</em>:</div></h3>-->
-          <h3><div style=" margin-right: 10px; margin-left: 10px;" ><font color="white"><em> thesocks </font></em></div></h3>
+          <h3><div style=" margin-right: 10px; margin-left: 10px;" ><font color="green"><em> thesocks </font></em></div></h3>
 
                 
 
