--- a/principal_new.html
+++ b/principal_new.html
@@ -317,7 +317,7 @@
 
 
       <div id="menu" class="menu">
-                <center><h4><i><font color="green">thesocks.net</i></font></h4></center>
+                <center><h4><i><font color="dodgerblue">thesocks.net</i></font></h4></center>
 
                 <ul>    
                     <li>                         
@@ -523,7 +523,7 @@
   <!--<h3><div id="NFTUsernames-count"><em>thesocks</em>:</div></h3>-->
   <h3>
     <div style="margin-right: 10px; margin-left: 10px;">
-      <font color="green"><em>thesocks</em></font>
+      <font color="dodgerblue"><em>thesocks</em></font>
     </div>
   </h3>
 
@@ -532,11 +532,11 @@
   </a>  
 
   <a id="menuBtn" style="margin-left: auto; font-size: 32px;">☰</a>  
-  
+
 </div>
 
 
-  <ul class="gallery_toolbar" style="background-color: green; border: 2px solid lime; border-radius: 20px;">     
+  <ul class="gallery_toolbar" style="background-color: dodgerblue; border: 2px solid blue; border-radius: 20px;">     
            
 
        
