--- a/principal_new.html
+++ b/principal_new.html
@@ -319,7 +319,8 @@
    </div>
 
           
- <div class="col-sm-6">   
+ <div class="col-sm-6" style="padding-left: 0; padding-right: 0;">   
+ 
 
 
       <div id="menu" class="menu">
