--- a/principal_new.html
+++ b/principal_new.html
@@ -626,9 +626,19 @@ span.hashtag {
          <div class="user-following-publication-container"  >
          </div> 
         
-         <button id="verMasBtn" class="btn btn-primary" style="margin-top: 10px;">
+         <button id="verMasBtn" class="btn" style="
+            margin: 20px auto;
+            display: block;
+            font-size: 18px;
+            border-radius: 10px;
+            background-color: dodgerblue;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            text-align: center;
+        ">
     Ver más publicaciones
-  </button>     
+</button>
 
     </div>
 <!--#################################################-->    
