--- a/principal_new.html
+++ b/principal_new.html
@@ -414,7 +414,7 @@
                       </li>
 
 
-                        <li><a href="#">
+                        <li><a href="conocer_mas.html">
                           <span class="glyphicon glyphicon-question-sign " style="color: white; margin-left: 8px; margin-right: 16px;"></span>                           
                           <span>Aprender más</span>
                           </a>
