--- a/ipsf_contenido.html
+++ b/ipsf_contenido.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Subir Imagen/Video a IPFS</title>
 </head>
 <body>
     <h2>Subir Imagen o Video a IPFS</h2>
-    <form id="uploadForm" enctype="multipart/form-data">
-        <label for="file">Selecciona imagen o video:</label><br/>
-        <input type="file" id="file" name="file" accept="image/*,video/*" required /><br/><br/>
 
-        <label for="tipo">Tipo:</label><br/>
-        <select id="tipo" name="tipo" required>
-            <option value="">--Selecciona tipo--</option>
-            <option value="imagen">Imagen</option>
-            <option value="video">Video</option>
-        </select><br/><br/>
+    <form id="uploadForm" enctype="multipart/form-data">
+        <label for="archivo">Selecciona imagen o video:</label><br/>
+        <input type="file" id="archivo" name="archivo" accept="image/*,video/*" required /><br/><br/>
+
+        <label for="correlativo">ID de la publicación:</label><br/>
+        <input type="number" id="correlativo" name="correlativo" required /><br/><br/>
 
         <button type="submit">Subir a IPFS y registrar</button>
     </form>
@@ -32,7 +29,7 @@
             const formData = new FormData(form);
 
             try {
-                const res = await fetch('https://api.thesocks.net/registrar-contenido/', {
+                const res = await fetch('/registrar-contenido/', {
                     method: 'POST',
                     body: formData
                 });
@@ -40,8 +37,8 @@
                 const data = await res.json();
 
                 if (res.ok) {
-                    resultadoDiv.innerHTML = `<p style="color:green;">¡Contenido registrado!</p>
-                        <p>IPFS URL: <a href="${data.ipfs_url}" target="_blank">${data.ipfs_url}</a></p>`;
+                    resultadoDiv.innerHTML = `<p style="color:green;">¡Contenido registrado con éxito!</p>
+                    <p>IPFS URL: <a href="${data.cid ? `https://w3s.link/ipfs/${data.cid}` : '#'}" target="_blank">${data.cid}</a></p>`;
                 } else {
                     resultadoDiv.innerHTML = `<p style="color:red;">Error: ${data.error || data.mensaje}</p>`;
                 }
