--- a/ipsf_contenido.html
+++ b/ipsf_contenido.html
@@ -29,7 +29,7 @@
             const formData = new FormData(form);
 
             try {
-                const res = await fetch('/registrar-contenido/', {
+                const res = await fetch('/subir/', {
                     method: 'POST',
                     body: formData
                 });
