--- a/ipsf_contenido.html
+++ b/ipsf_contenido.html
@@ -29,7 +29,7 @@
             const formData = new FormData(form);
 
             try {
-                const res = await fetch('https://api.thesocks.net/subir/', {
+                const res = await fetch('https://api.thesocks.net/subirW3/', {
                     method: 'POST',
                     body: formData
                 });
