--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <a class="underlineHover" style="display: inline-block;" href="https://raw.githubusercontent.com/cawdevs/sock/master/files/theSocksApp.apk" download>Descargar Apk para Android</a>     </center>   
 
               <br>
-                 <a href="conocer_mas.html" class="underlineHover" style="display: inline-block;">❓Conocer Más</a>
+                 <a href="conocer_mas_intro.html" class="underlineHover" style="display: inline-block;">❓Conocer Más</a>
 
                 </div>
             </div>
