--- a/principal_new.html
+++ b/principal_new.html
@@ -1366,11 +1366,11 @@ span.hashtag {
         document.body.addEventListener("mouseup", function (event) {
             mouseEndX = event.clientX;
 
-            if (mouseStartX < 50 && mouseEndX > mouseStartX + 50) {
-                toggleMenu(true);
-            } else if (mouseStartX > 150 && mouseEndX < mouseStartX - 50) {
-                toggleMenu(false);
-            }
+            //if (mouseStartX < 50 && mouseEndX > mouseStartX + 50) {
+            //    toggleMenu(true);
+            //} else if (mouseStartX > 150 && mouseEndX < mouseStartX - 50) {
+             //   toggleMenu(false);
+            //}
         });
     });
 </script>
