--- a/principal_new.html
+++ b/principal_new.html
@@ -1336,7 +1336,7 @@ async function verificarServidor() {
     })
     .catch(error => {
       const estadoDiv = document.getElementById('estado-servidor');
-      estadoDiv.innerHTML = '<img src="icon.svg" alt="Servidor desconectado" />';
+      estadoDiv.innerHTML = '<img src="images/icons/disconnect_icon.svg" alt="Algunas funciones están temporalmente fuera de servicio" />';
     });
 }
 
