--- a/principal_new.html
+++ b/principal_new.html
@@ -1339,7 +1339,7 @@ async function verificarServidor() {
       estadoDiv.innerHTML = '<img src="images/icons/disconnect_icon.svg" alt="Algunas funciones están temporalmente fuera de servicio " width="55px"/>';
 
       const estadoDiv2 = document.getElementById('estado-servidor_msg');
-      estadoDiv2.innerHTML = '<center><h4><p>Algunas funciones están temporalmente fuera de servicio </p></h4></center>';
+      estadoDiv2.innerHTML = '<center><h5><p><font color="red">Algunas funciones están temporalmente fuera de servicio </font></p></h5></center>';
 
 
     });
