--- a/principal_new.html
+++ b/principal_new.html
@@ -861,7 +861,7 @@ span.hashtag {
 <div class="modal fade" id="myModal_comentarios" role="dialog">    
     <div class="modal-dialog">
         <!-- Modal content -->
-        <div class="modal-content" style="background: linear-gradient(180deg, lime, black);">
+        <div class="modal-content" style="background: linear-gradient(180deg, dodgerblue,white);">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                  
