--- a/principal_new.html
+++ b/principal_new.html
@@ -354,7 +354,7 @@
                        <a data-toggle="tab" href="#menu_comprar_criptos" >
                           <img src="images/icons/btc_icon.SVG" alt="My svg_logo" width="30"  style="transform: rotate(0deg); display: inline-block; margin-left: 8px;  margin-right: 16px;">Recargar con Bitcoin
 
-                           <div style="display:inline-block;" id="saldo_CAW"><font color="lime"></font></div>   
+                         
                                            
                         </a>
                        </li>    
@@ -583,7 +583,7 @@ span.hashtag {
   <!-- Saldo SOCK -->
   <div style="display: flex; align-items: center;">
     <img src="images/icons/sock_coin.SVG" alt="SOCK" width="20" style="margin-right: 8px;">
-    <div id="saldo_CAW" style="color: lime;">0</div>
+    <div id="saldo_CAW" style="color: black;">0</div>
   </div>
 
   <!-- Botón de actualización -->
