--- a/principal_new.html
+++ b/principal_new.html
@@ -728,7 +728,7 @@ span.hashtag {
     </button>
 
     <button onclick="loadGame_revolutions()" style="display: flex; align-items: center;  font-size: 16px; background-color: white; color: white; border: none; border-radius: 10px; cursor: pointer;">
-        <img src="games/sockRevolutions/images/sockRevolutions.SVG" alt="Icono" style="width: 100px;">
+        <img src="games/sockRevolutions/images/sockRevolutions.svg" alt="Icono" style="width: 100px;">
         
     </button>
 </div>
