--- a/principal_new.html
+++ b/principal_new.html
@@ -11,7 +11,7 @@
              }
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(0deg, dodgerblue,white);
+            background: linear-gradient(0deg, dodgerblue,lightgray);
         }
    
         .container {
