--- a/transferir_btc_a_wallet_propia.html
+++ b/transferir_btc_a_wallet_propia.html
@@ -54,9 +54,9 @@
       const mensaje = document.getElementById('mensaje');
 
       mensaje.innerText = 'Procesando transferencia...';
-
+      
       try {
-        const response = await fetch('/transferir_fondos_btc/', {
+        const response = await fetch('https://api.thesocks.net/transferir_fondos_btc/', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
