--- a/principal_new.html
+++ b/principal_new.html
@@ -470,7 +470,7 @@
 </div>
 
 
-  <ul class="gallery_toolbar" style="background-color: dodgerblue; border: 2px solid blue; border-radius: 0px; margin-right: 15;">     
+  <ul class="gallery_toolbar" style="background: linear-gradient(0deg, dodgerblue ,darkblue); border: 2px solid blue; border-radius: 0px; margin-right: 15;">     
            
 
        
