--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="col-sm-3"></div>
         <div class="col-sm-6">
             <div class="wrapper fadeInDown">
-                <img src='images/n_logo_sock.SVG' alt="Logo Sock" width="150">
+                <img src='images/n_logo_socks.SVG' alt="Logo Sock" width="150">
                 <br><br>
                 <div id="formContent">
                     <h4 class="underlineHover">Red Social de Finanzas Decentralizada</h4>
