--- a/principal_new.html
+++ b/principal_new.html
@@ -489,7 +489,7 @@
        </a>
    -->    
        <a data-toggle="tab" href="#menu_hacer_publicacion" onclick="abrirModalPublicacion()" style="margin-left: 15px;">
-          <img id="image-post" src="images/icons/post_icon.SVG" alt="post" width="35">
+          <img id="image-post" src="images/icons/publication_icon.SVG" alt="post" width="35">
        </a>
 
 
